5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1674_1880.log
== TEST (2019-04-30 10:40:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:46:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	else (m==12):
		print("dezembro")
		
		
		
		
		
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 27
    else (m==12):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:47:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
		
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:47:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.228985
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
		
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
		
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:49:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.20734
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:49:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (1 <= m <= 12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.155409
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1 and m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1 and m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:50:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1 and m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.1951
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.191161
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.179885
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
		
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.183549
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.134294
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.141163
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.158469
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.117517
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.211475
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero de mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.231687
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if (m>=1) and (m<=12):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.22222
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero de mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:55:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.151491
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:55:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.13493
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:55:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.108825
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:55:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.15461
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.236037
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.116541
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.208772
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.188676
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero de mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
Abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.410049
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.272233
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.250711
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1880/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo de m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.132896
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.199769
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.150768
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero de mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:20:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:20:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("Janeiro")
	elif (m==2):
		print("Fevereiro")
	elif (m==3):
		print("Marco")
	elif (m==4):
		print("Abril")
	elif (m==5):
		print("Maio")
	elif (m==6):
		print("Junho")
	elif (m==7):
		print("Julho")
	elif (m==8):
		print("Agosto")
	elif (m==9):
		print("Setembro")
	elif (m==10):
		print("Outubro") 
	elif (m==11):
		print("Novembro")
	elif (m==12):
		print("Dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.134292
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:21:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:21:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valo m: "))

if ((m>=1) and (m<=12)):
	if (m==1):
		print("janeiro")
	elif (m==2):
		print("fevereiro")
	elif (m==3):
		print("marco")
	elif (m==4):
		print("abril")
	elif (m==5):
		print("maio")
	elif (m==6):
		print("junho")
	elif (m==7):
		print("julho")
	elif (m==8):
		print("agosto")
	elif (m==9):
		print("setembro")
	elif (m==10):
		print("outubro") 
	elif (m==11):
		print("novembro")
	elif (m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.124066
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
